Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-36970

Ensure eventing provides grace time in SDK for N1QL timeout

    XMLWordPrintable

Details

    • Untriaged
    • Unknown

    Description

      This is a tracking bug to ensure we set LCB_CNTL_N1QL_GRACE_PERIOD to avoid client timing out prior to server timeout messages being received. Please see CCBC-1122 and MB-36927 for details

      Attachments

        Issue Links

          Activity

            People

              faiz.veettil Faiz Veettil (Inactive)
              siri Sriram Melkote (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                PagerDuty