[MB-36970] Set N1QL grace period for query

Set N1QL grace period in SDK as 2 seconds.

Change-Id: I7c36dcbb88c435093eca4b6f84b692f1aa33ee9a
Reviewed-on: http://review.couchbase.org/120004
Reviewed-by: Jeelan Basha Poola <jeelan.poola@couchbase.com>
Reviewed-by: CI Bot
Tested-by: <faiz.veettil@couchbase.com>